--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "IDCAMP2022-BACKEND",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint . --fix",
-    "format": "prettier . --write",
-    "prepare": "husky install"
-  },
-  "keywords": ["dicoding-backend-node"],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.16.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
-    "prettier": "^2.6.2"
-  }
+	"name": "IDCAMP2022-BACKEND",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"lint": "eslint . --fix",
+		"format": "prettier . --write",
+		"prepare": "husky install"
+	},
+	"keywords": [
+		"dicoding-backend-node"
+	],
+	"author": "Hanif Dwy Putra S <hanifdwyputrasembiring@gmail.com>",
+	"license": "MIT",
+	"devDependencies": {
+		"eslint": "^8.16.0",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^8.5.0",
+		"husky": "^8.0.1",
+		"prettier": "^2.6.2"
+	},
+	"type": "module"
 }
