--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"lint": "eslint . --fix",
 		"format": "prettier . --write",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"test": "node scripts/exec_test.js"
 	},
 	"keywords": [
 		"dicoding-backend-node"
